accessibility improvements: changed outline color for better visibility, improved 'IconButton' outline visibility when icon is active; fixed img src in 'CateringEstablishmentsDetails' which caused unintentional GET method

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -6,6 +6,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  outline-color: #3e8eff;
 }
 
 html {
